# adventofcode

./: .gitignore  README.md  files.go  go.mod  go.sum  loader.go  new.sh  scanner.go  scanner_test.go  test_runner.go
2019/day1/: notes.md
2019/day1/day1-1/: Cargo.toml
2019/day1/day1-1/benches/: bench.rs
2019/day1/day1-1/src/: lib.rs
2019/day2/day2-1/: Cargo.toml
2019/day2/day2-2/: Cargo.toml
2019/day4/: notes.md
2019/day4/day4-1/: Cargo.toml
2019/day5/: notes.md
2019/day6/: notes.md
2019/python/day1/: day1.py
2020/: new.sh
2020/day1/: day1.go  day1_test.go
2020/day10/: day10.go  day10_test.go
2020/day11/: day11.go  day11_test.go
2020/day12/: day12.go  day12_test.go
2020/day13/: day13.go  day13_test.go
2020/day14/: day14.go  day14_test.go
2020/day15/: day15.go  day15_test.go
2020/day16/: day16.go  day16_test.go
2020/day19/: day19.go  day19_test.go  solution.py
2020/day2/: day2.go  day2_test.go
2020/day20/: day20.go  day20_test.go
2020/day21/: day21.go  day21_test.go
2020/day22/: day22_test.go
2020/day23/: day23.go  day23_test.go
2020/day24/: day24_test.go
2020/day25/: day25.go  day25_test.go
2020/day3/: day3.go  day3_test.go
2020/day4/: day4.go  day4_test.go
2020/day5/: day5.go  day5_test.go
2020/day6/: day6.go  day6_test.go
2020/day7/: day7.go  day7_test.go
2020/day8/: day8.go  day8_test.go
2020/day9/: day9.go  day9_test.go
2020/go/: 2020-benchmark.xlsx  benchmarks.txt
2021/python/: dayx.py
2022/input/: day4
pkg/aoc/: io.go  test_runner.go
pkg/rxscan/: scanner.go  scanner_test.go
(+105 files in other folders)
